# newglass

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.web.ts
config/: config.example.toml
dist-electron/: main.js  main.js.map  preload.js
electron/: main.ts  preload.ts
migrations/: 001_initial_schema.sql
src/: App.tsx  config.rs  index.css  main.rs  main.tsx  types.ts
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  websocket.rs
src/audio/: formats.rs  mod.rs  processing.rs  utils.rs
src/components/: LoadingScreen.tsx  MainWindow.tsx  SettingsWindow.tsx
src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  EmptyState.tsx  SessionSidebar.tsx
src/components/settings/: AISettings.tsx  AboutSettings.tsx  AdvancedSettings.tsx  AudioSettings.tsx  GeneralSettings.tsx  PrivacySettings.tsx  ShortcutsSettings.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx  SettingsButton.tsx  VoiceButton.tsx  WindowControls.tsx
src/config/: mod.rs
src/core/: app.rs  events.rs  mod.rs  session.rs
src/lib/: electronMock.ts  utils.ts
src/repositories/: message.rs  mod.rs  session.rs  transcript.rs
src/services/: audio.rs  chat.rs  mod.rs  openrouter.rs  stt.rs  summary.rs
src/stores/: aiStore.ts  appStore.ts  settingsStore.ts
src/types/: index.ts
web/: index.html
