[package]
name = "newglass"
version = "0.1.0"
edition = "2021"
authors = ["NewGlass Team"]
description = "A fast, lightweight desktop AI assistant built with Rust"
license = "MIT"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Audio processing
cpal = "0.15"
hound = "3.5"

# HTTP client for OpenRouter
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.21"

# WebSocket for real-time communication
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Configuration and CLI
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
tokio-util = "0.7"
parking_lot = "0.12"

# Optional GUI (commented out for now)
# tauri = { version = "1.0", features = ["api-all"], optional = true }

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "newglass"
path = "src/main.rs"